# Wave

./: .gitignore  CMakeLists.txt  Wave2.pro  drawcanvas.cpp  drawcanvas.h  mainwindow.cpp  mainwindow.ui
core/: MetaWave.cpp  MetaWave.h  Point.cpp  Point.h  Skeleton.cpp  Skeleton.h  Wave.cpp  Wave.h  WaveProcessor.cpp  Waveprocessor.cpp  Waveprocessor.h  wave.cpp  wave.h  waveprocessor.cpp  waveprocessor.h
graphics_items/: QGraphicsCursorItem.cpp  QGraphicsCursorItem.h
gui/: drawcanvas.cpp  drawcanvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: main.cpp  test_wave.cpp  test_wave.h
